# tms-drf-app-woman

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: manage.py
src/categories/: models.py
src/categories/migrations/: 0001_initial.py
src/django_extended/: apps.py
src/src/: settings.py  urls.py
src/women/: models.py  serializers.py  urls.py  views.py
src/women/migrations/: 0001_initial.py  0002_add_related_name_to_category.py  0003_adding_user.py
